[OS/2] Bug 404196: fix calculation of space width in GetMetrics, so that monospaced text always lines up nicely